--- a/index.html
+++ b/index.html
@@ -1,32 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sacolao da Chacara</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sacolao da Chacara</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-    <header class="header">
-        <div class="container-header">
-            <a href="#">
-                <img src="./images/logo.png" alt="Sacolão da Chácara">
-            </a>
-            <nav class="menu">
-                <ul>
-                    <li><a href="#">Menu Inicial</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Cárdapio</a></li>
-                    <li><a href="#">Contato</a></li>
-                </ul>
-                <button>
-                    <i class="fas fa-cart-shopping"></i>
-                </button>
-            </nav>
-        </div>
-    </header>
-    <script src="script.js"></script>
+  <header class="header">
+    <div class="company-info">
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-facebook"></i>
+      <a href="#" class="logo">
+        <img src="./images/logo.png" alt="Sacolão da Chácara">
+      </a>
+      <i class="fa-solid fa-phone"></i>
+      <p>(51)99999-9999</p>
+    </div>
+    <div class="menu-nav">
+      <a href="#">Menu Inicial</a>
+      <hr>
+      <a href="#">Sobre</a>
+      <hr>
+      <a href="#">Cárdapio</a>
+      <hr>
+      <a href="#">Contato</a>
+    </div>
+      
+  </header>
+  <div class="slider">
+    <div class="slides">
+      <input type="radio" name="radio-btn" id="radio1">
+      <input type="radio" name="radio-btn" id="radio2">
+      <input type="radio" name="radio-btn" id="radio3">
+
+      <div class="slide first">
+        <img src="./images/churrasco.jpeg" alt="Imagem Ilustrativa">
+      </div>
+      <div class="slide">
+        <img src="./images/churrasco-2.jpeg" alt="Imagem Ilustrativa">
+      </div>
+      <div class="slide">
+        <img src="./images/costela.jpeg" alt="Imagem Ilustrativa">
+      </div>
+
+      <div class="navigation-auto">
+        <div class="auto-btn1"></div>
+        <div class="auto-btn2"></div>
+        <div class="auto-btn3"></div>
+      </div>
+    </div>
+    <div class="manual-navigation">
+      <label for="radio1" class="manual-btn"></label>
+      <label for="radio2" class="manual-btn"></label>
+      <label for="radio3" class="manual-btn"></label>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
