Adding an Label and button at each image to call client to buy

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <i class="fa-solid fa-phone"></i>
       <p>(51)99999-9999</p>
     </div>
+    <hr class="linha-divisao">
     <div class="menu-nav">
       <a href="#">Menu Inicial</a>
       <hr>
@@ -28,9 +29,10 @@
       <hr>
       <a href="#">Contato</a>
     </div>
-      
   </header>
+  <hr class="linha-divisao">
   <div class="slider">
+    <hr class="linha-divisao">
     <div class="slides">
       <input type="radio" name="radio-btn" id="radio1">
       <input type="radio" name="radio-btn" id="radio2">
@@ -38,12 +40,24 @@
 
       <div class="slide first">
         <img src="./images/churrasco.jpeg" alt="Imagem Ilustrativa">
+        <div class="overlay">
+          <p>Faça seu pedido aqui!</p>
+          <button>Cárdapio</button>
+        </div>
       </div>
       <div class="slide">
         <img src="./images/churrasco-2.jpeg" alt="Imagem Ilustrativa">
+        <div class="overlay">
+          <p>Faça seu pedido aqui!</p>
+          <button>Cárdapio</button>
+        </div>
       </div>
       <div class="slide">
         <img src="./images/costela.jpeg" alt="Imagem Ilustrativa">
+        <div class="overlay">
+          <p>Faça seu pedido aqui!</p>
+          <button>Cárdapio</button>
+        </div>
       </div>
 
       <div class="navigation-auto">
@@ -58,6 +72,7 @@
       <label for="radio3" class="manual-btn"></label>
     </div>
   </div>
+  <hr class="linha-divisao">
   <script src="script.js"></script>
 </body>
 </html>
