[FEATURE] Section Sobre criada

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <hr>
       <a href="#">Sobre</a>
       <hr>
-      <a href="#">Cárdapio</a>
+      <a href="#">Cardápio</a>
       <hr>
       <a href="#">Contato</a>
     </div>
@@ -42,21 +42,21 @@
         <img src="./images/churrasco.jpeg" alt="Imagem Ilustrativa">
         <div class="overlay">
           <p>Faça seu pedido aqui!</p>
-          <button>Cárdapio</button>
+          <button>Cardápio</button>
         </div>
       </div>
       <div class="slide">
         <img src="./images/churrasco-2.jpeg" alt="Imagem Ilustrativa">
         <div class="overlay">
           <p>Faça seu pedido aqui!</p>
-          <button>Cárdapio</button>
+          <button>Crdápio</button>
         </div>
       </div>
       <div class="slide">
         <img src="./images/costela.jpeg" alt="Imagem Ilustrativa">
         <div class="overlay">
           <p>Faça seu pedido aqui!</p>
-          <button>Cárdapio</button>
+          <button>Cardápio</button>
         </div>
       </div>
 
@@ -73,6 +73,18 @@
     </div>
   </div>
   <hr class="linha-divisao">
+  <section class="sobre">
+    <h1>Bem-Vindos ao Sacolão da Chácara!</h1>
+    <h2>Tradição e Qualidade desde 2002</p>
+    <p>Desde 2002, o Sacolão da Chácara é sinônimo de frescor e confiança na zona sul de Porto Alegre. Localizado na Avenida Edgar Pires de Castro 3295, uma das maiores avenidas da região, estamos estrategicamente posicionados perto da Restinga e da Hípica, atendendo com facilidade grande parte da comunidade.</p>
+    <p>Especializados em hortifruti, oferecemos uma seleção variada de frutas, legumes e verduras fresquinhos, colhidos com cuidado para garantir o melhor sabor e qualidade à sua mesa.</p>
+    <p>Além disso, contamos com uma padaria e confeitaria que produz diariamente pães quentinhos, bolos e doces irresistíveis. Nosso açougue oferece carnes de procedência garantida, com cortes preparados para todas as suas necessidades.</p>
+    <p>E para deixar seus finais de semana ainda mais saborosos, temos churrasco preparado na hora, disponível aos domingos e feriados, perfeito para reunir a família e amigos.</p>
+    <p>O Sacolão da Chácara é mais do que um mercado. É um lugar onde tradição e qualidade caminham juntas para oferecer o melhor para você e sua família. Venha nos visitar e conheça tudo o que temos a oferecer!</p>
+  </section>
+  <section class="cardapio">
+    <h1>Cardápio</h1>
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
