Erro gramatical resolvido no index

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <img src="./images/churrasco-2.jpeg" alt="Imagem Ilustrativa">
         <div class="overlay">
           <p>Faça seu pedido aqui!</p>
-          <button>Crdápio</button>
+          <button>Cardápio</button>
         </div>
       </div>
       <div class="slide">
@@ -81,9 +81,6 @@
     <p>Além disso, contamos com uma padaria e confeitaria que produz diariamente pães quentinhos, bolos e doces irresistíveis. Nosso açougue oferece carnes de procedência garantida, com cortes preparados para todas as suas necessidades.</p>
     <p>E para deixar seus finais de semana ainda mais saborosos, temos churrasco preparado na hora, disponível aos domingos e feriados, perfeito para reunir a família e amigos.</p>
     <p>O Sacolão da Chácara é mais do que um mercado. É um lugar onde tradição e qualidade caminham juntas para oferecer o melhor para você e sua família. Venha nos visitar e conheça tudo o que temos a oferecer!</p>
-  </section>
-  <section class="cardapio">
-    <h1>Cardápio</h1>
   </section>
   <script src="script.js"></script>
 </body>
